--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,22 @@
 
 #__next {
   background-color: rgb(56, 56, 56);
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+  background-size: cover;
+}
+
+* {
+  font-family: "Inter", sans-serif;
+}
+
+.bg-img {
+  background-image: url(../assets//bg.jpg);
 }
